# dolary-fastapi

./: .gitignore  README.md  currency.sqlite  main.py  pyproject.toml  requirements.txt
cron/: ve.py
db/: conn.py  currency.py  currency_history.py
scrappe/: lib.py  ve.py
